tests/test_exception/bad/output/dangling_exception.catala_en.A.Interpret
[ERROR] Unknown label for the scope variable x: "base_y"

  --> tests/test_exception/bad/dangling_exception.catala_en
   | 
12 |   exception base_y
   |             ^^^^^^
   + Test
